# sudo

./: .clang-format  .gitignore  .hgignore  .hgtags  ABOUT-NLS  BUGS  CHANGES  CONTRIBUTORS  ChangeLog  HISTORY  INSTALL  INSTALL.binary  INSTALL.md  IOLOG.md  LICENSE  LICENSE.md  MANIFEST  Makefile  Makefile.binary  Makefile.binary.in  Makefile.in  NEWS  OPTIONS  PORTING  README  README.LDAP  README.LDAP.md  README.md  RUNSON  SUPPORTED  TODO  TROUBLESHOOTING  UPGRADE  Vscodedev.dev  WHATSNEW  aclocal.m4  acsite.m4  aix.c  alias.c  alloc.c  (+188 more)
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  main.yml
auth/: API  afs.c  aix_auth.c  bsdauth.c  dce.c  fwtk.c  kerb4.c  kerb5.c  opie.c  pam.c  passwd.c  rfc1938.c  secureware.c  securid.c  securid5.c  sia.c  skey.c  sudo_auth.c  sudo_auth.h
common/: Makefile.in  aix.c  alloc.c  atobool.c  atoid.c  atomode.c  error.c  event.c  event_poll.c  event_select.c  fatal.c  fileops.c  fmt_string.c  gettime.c  gidlist.c  lbuf.c  list.c  progname.c  secure_path.c  setgroups.c  sudo_conf.c  sudo_debug.c  sudo_dso.c  sudo_printf.c  term.c  ttysize.c  zero_bytes.c
compat/: Makefile.in  charclass.h  clock_gettime.c  closefrom.c  dlfcn.h  dlopen.c  endian.h  fnmatch.c  fnmatch.h  getaddrinfo.c  getaddrinfo.h  getcwd.c  getgrouplist.c  getline.c  getopt.h  getopt_long.c  getprogname.c  glob.c  glob.h  inet_pton.c  isblank.c  memrchr.c  mksiglist.c  mksiglist.h  mksigname.c  mksigname.h  mkstemp.c  mkstemps.c  mktemp.c  nanosleep.c  nss_dbdefs.h  pw_dup.c  setenv.c  sha2.c  sig2str.c  sigaction.c  siglist.in  snprintf.c  stdbool.h  strcasecmp.c  (+12 more)
doc/: CONTRIBUTORS  HISTORY  LICENSE  Makefile.in  TROUBLESHOOTING  UPGRADE  contributors.pod  cvtsudoers.cat  cvtsudoers.man.in  cvtsudoers.mdoc.in  fixman.sh  fixmdoc.sh  history.pod  license.pod  plugin.pod  sample.sudo.conf  schema.ActiveDirectory  schema.OpenLDAP  sudo.cat  sudo.conf.cat  sudo.conf.man.in  sudo.conf.mdoc.in  sudo.man.in  sudo.man.pl  sudo.man.sh  sudo.mdoc.in  sudo.mdoc.sh  sudo.pod  sudo_logsrv.proto.man.in  sudo_logsrv.proto.mdoc.in  sudo_logsrvd.conf.man.in  sudo_logsrvd.conf.mdoc.in  sudo_logsrvd.man.in  sudo_logsrvd.mdoc.in  sudo_plugin.cat  sudo_plugin.man.in  sudo_plugin.mdoc.in  sudo_plugin.pod  sudo_plugin_python.man.in  sudo_plugin_python.mdoc.in  (+25 more)
docker/: README
docs/: CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  HISTORY  HISTORY.md  LICENSE  LICENSE.md  Makefile.in  SECURITY.md  TROUBLESHOOTING.md  UPGRADE  UPGRADE.md  cvtsudoers.man.in  cvtsudoers.mdoc.in  schema.ActiveDirectory  schema.IBM_LDAP  sudo.conf.man.in  sudo.conf.man.in.sed  sudo.conf.mdoc.in  sudo.man.in  sudo.man.in.sed  sudo.mdoc.in  sudo_logsrv.proto.man.in  sudo_logsrv.proto.mdoc.in  sudo_logsrvd.conf.man.in  sudo_logsrvd.conf.mdoc.in  sudo_logsrvd.man.in  sudo_logsrvd.mdoc.in  sudo_plugin.man.in  sudo_plugin.mdoc.in  sudo_plugin_python.man.in  sudo_plugin_python.mdoc.in  sudo_sendlog.man.in  sudo_sendlog.mdoc.in  sudoers.ldap.man.in  sudoers.ldap.mdoc.in  sudoers.man.in  sudoers.man.in.sed  sudoers.mdoc.in  (+6 more)
emul/: charclass.h  err.h  fnmatch.h  search.h  timespec.h  utime.h
etc/: codespell.exclude  codespell.ignore  codespell.skip  sudo-logsrvd.pp  sudo-python.pp  sudo.pp  uncrustify-small.cfg  uncrustify.cfg
examples/: Makefile.in  sudo.conf.in  sudo_logsrvd.conf  sudo_logsrvd.conf.in  sudoers  sudoers.in
include/: Makefile.in  alloc.h  compat.h  error.h  fatal.h  fileops.h  gettext.h  hostcheck.h  intercept.pb-c.h  lbuf.h  list.h  log_server.pb-c.h  missing.h  queue.h  secure_path.h  sudo_alloc.h  sudo_compat.h  sudo_conf.h  sudo_debug.h  sudo_digest.h  sudo_dso.h  sudo_event.h  sudo_eventlog.h  sudo_fatal.h  sudo_gettext.h  sudo_iolog.h  sudo_json.h  sudo_lbuf.h  sudo_plugin.h  sudo_rand.h  sudo_ssl_compat.h  sudo_util.h
include/compat/: charclass.h  endian.h  fnmatch.h  getaddrinfo.h  getopt.h  glob.h  sha2.h  timespec.h  utime.h
include/protobuf-c/: protobuf-c.h
lib/eventlog/: Makefile.in  eventlog.c  eventlog_conf.c  eventlog_free.c  logwrap.c  parse_json.c  parse_json.h
lib/fuzzstub/: Makefile.in  fuzzstub.c
lib/iolog/: Makefile.in  host_port.c  hostcheck.c  iolog_clearerr.c  iolog_close.c  iolog_conf.c  iolog_eof.c  iolog_fileio.c  iolog_filter.c  iolog_flush.c  iolog_gets.c  iolog_json.c  iolog_json.h  iolog_legacy.c  iolog_loginfo.c  iolog_mkdirs.c  iolog_mkdtemp.c  iolog_mkpath.c  iolog_nextid.c  iolog_open.c  iolog_openat.c  iolog_path.c  iolog_read.c  (+5 more)
logsrvd/: Makefile.in  buffer.c  buffer.h  dotdot.c  eventlog.c  iolog.h  iolog_reader.c  iolog_writer.c  log_server.pb-c.c  log_server.pb-c.h  log_server.proto  logsrv_util.c  logsrv_util.h  logsrvd.c  logsrvd.h  logsrvd_conf.c  logsrvd_journal.c  logsrvd_local.c  logsrvd_queue.c  logsrvd_relay.c  sendlog.c  sendlog.h  tls_client.c  tls_common.h  tls_init.c
m4/: ax_func_getaddrinfo.m4  ax_func_snprintf.m4  ax_gcc_builtin.m4  ax_prog_cc_for_build.m4  ax_sys_weak_alias.m4  hardening.m4  ldap.m4  libtool.m4  openssl.m4  pie.m4  python.m4  sanitizer.m4  sudo.m4  visibility.m4
po/: ar.mo  ar.po  ast.mo  ast.po  ca.mo  ca.po  cs.mo  cs.po  da.mo  da.po  de.mo  de.po  eo.mo  eo.po  es.mo  es.po  eu.mo  eu.po  fa.mo  fa.po  fi.mo  fi.po  fr.mo  fr.po  fur.mo  fur.po  gl.mo  gl.po  hr.mo  hr.po  hu.mo  hu.po  id.mo  id.po  it.mo  it.po  ja.mo  ja.po  ka.mo  ka.po  (+40 more)
scripts/: build_pkgs  check_man.in  log2cl.pl  ltmain.sh  mkdep.pl  mkpkg  pp  unanon
src/: Makefile.in  aix.c  alloc.c  apparmor.c  atobool.c  audit.c  conversation.c  copy_file.c  edit_open.c  env_hooks.c  error.c  exec.c  exec_common.c  exec_intercept.c  exec_intercept.h  exec_iolog.c  exec_monitor.c  exec_nopty.c  exec_preload.c  exec_ptrace.c  exec_ptrace.h  exec_pty.c  fileops.c  fmt_string.c  get_pty.c  hooks.c  intercept.exp  intercept.exp.in  intercept.pb-c.c  intercept.proto  lbuf.c  limits.c  list.c  load_plugins.c  locale_stub.c  net_ifs.c  openbsd.c  parse_args.c  preload.c  preserve_fds.c  (+25 more)
zlib/: Makefile.in  adler32.c  crc32.c  crc32.h  gzguts.h  infback.c  inflate.c  inftrees.c  trees.c  zconf.h.in
(+792 files in other folders)
